fixed incorrect counting and counting before dealer's card is visible

--- a/src/_styles/main.scss
+++ b/src/_styles/main.scss
@@ -405,14 +405,14 @@ $needle-origin: 8px 84px;
 
 .houseText {
   position: absolute;
-  top: 87px;
-  left: 34px;
+  top: 83px;
+  left: 25px;
 }
 
 .playerText {
   position: absolute;
-  top: 87px;
-  right: 34px;
+  top: 83px;
+  right: 25px;
 }
 
 .advantageText {
